--- a/login.html
+++ b/login.html
@@ -7,25 +7,41 @@
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
     />
     <title>登陆</title>
-    <!-- 初始化移动端rem，1rem => 100px -->
     <script src="js/base.js"></script>
-    <!-- 初始化css -->
-    <link rel="stylesheet" href="css/base.css" />
-    <!-- 登录页面css -->
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
     <!-- 背景图外层 -->
     <div class="wrap">
-        <div class="occlusion"></div>
+      <!-- logo -->
+      <img src="images/logo.png" alt="logo" class="logo">
+      <div class="occlusion"></div>
       <!-- 背景图 -->
       <div class="wrap-background">
         <img src="images/background2.jpg" alt="背景图" />
       </div>
       <!--css3实现波纹-->
       <div class="wrap-waves">
-        <i class="wave w1"></i> <i class="wave w2"></i>
+        <i class="wave w1"></i> <i class="wave w2"></i> <i class="wave w3"></i>
+        <i class="wave w4"></i>
       </div>
-    </div>
+      <!-- 账号密码输入框 -->
+      <div class="login">    
+        <input
+          type="text"
+          class="user"
+          autocomplete="off"
+          placeholder="用户名"
+        />
+        <input
+          type="password"
+          class="password"
+          autocomplete="off"
+          placeholder="密码"
+        />
+        <span></span>
+      <a class="login-btn" href="javascript:" id="showTooltips">登陆</a>
+      </div>
+      <p class="caveat" id="caveat">用户名或密码错误！</p>
   </body>
 </html>
