--- a/login.html
+++ b/login.html
@@ -8,6 +8,8 @@
     />
     <title>登陆</title>
     <script src="js/base.js"></script>
+    <!-- <link rel="stylesheet" href="css/weui.min.css" /> -->
+    <!-- <link rel="stylesheet" href="css/weui.min.css" /> -->
     <link rel="stylesheet" href="css/login.css" />
   </head>
   <body>
@@ -26,7 +28,7 @@
         <i class="wave w4"></i>
       </div>
       <!-- 账号密码输入框 -->
-      <div class="login">    
+      <div class="login" id="footer">    
         <input
           type="text"
           class="user"
@@ -43,5 +45,19 @@
       <a class="login-btn" href="javascript:" id="showTooltips">登陆</a>
       </div>
       <p class="caveat" id="caveat">用户名或密码错误！</p>
+      <!-- <div class="footer" v-show="hidshow"></div> -->
+    <script src="js/jquery-2.1.4.js"></script>
+    <!-- <script src="js/jquery-weui.js"></script> -->
+    <script>
+var oHeight = $(document).height();
+    $(window).resize(function(){ //ios软键盘弹出不会触发resize事件
+        if($(document).height() < oHeight){
+            $("#footer").css("position","static");
+        }else{
+            $("#footer").css("position","absolute"); //adsolute或fixed，看你布局
+        }
+    });
+
+    </script>
   </body>
 </html>
