--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.css" />
+    <link rel="stylesheet" href="https://www.swiper.com.cn/dist/css/swiper.min.css">
     <link rel="stylesheet" href="css/index.css" />
     <style>
       
@@ -69,49 +70,66 @@
           <div class="wrap-under"></div>
           <!-- 底部 -->
           <div class="wrap">
-            <div class="swiper-container">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide slide">
-                  <div class="placeholder">
-                    <img src="images/icon_nav_button.png" alt="" />
-                    <p>优惠券</p>
-                  </div>
+            <div class="weui-grids wrap-father">
+              <a href="" class="weui-grid js_grid wrap-chlid">
+                <div class="weui-grid__icon">
+                  <img src="images/icon_nav_button.png" alt="">
                 </div>
-                <div class="swiper-slide slide">
-                  <div class="placeholder">
-                    <img src="images/icon_nav_button.png" alt="" />
-                    <p>优惠券</p>
-                  </div>
+                <p class="weui-grid__label">
+                  Button
+                </p>
+              </a>
+              <a href="" class="weui-grid js_grid wrap-chlid">
+                <div class="weui-grid__icon">
+                  <img src="images/icon_nav_button.png" alt="">
                 </div>
-                <div class="swiper-slide slide">
-                  <div class="placeholder">
-                    <img src="images/icon_nav_button.png" alt="" />
-                    <p>优惠券</p>
-                  </div>
+                <p class="weui-grid__label">
+                  Button
+                </p>
+              </a>
+              <a href="" class="weui-grid js_grid wrap-chlid">
+                <div class="weui-grid__icon">
+                  <img src="images/icon_nav_button.png" alt="">
                 </div>
-                <div class="swiper-slide slide">
-                  <div class="placeholder">
-                    <img src="images/icon_nav_button.png" alt="" />
-                    <p>优惠券</p>
-                  </div>
+                <p class="weui-grid__label">
+                  Button
+                </p>
+              </a>
+              <a href="" class="weui-grid js_grid wrap-chlid">
+                <div class="weui-grid__icon">
+                  <img src="images/icon_nav_button.png" alt="">
                 </div>
-                <div class="swiper-slide slide">
-                  <div class="placeholder">
-                    <img src="images/icon_nav_button.png" alt="" />
-                    <p>优惠券</p>
-                  </div>
+                <p class="weui-grid__label">
+                  Button
+                </p>
+              </a>
+              <a href="" class="weui-grid js_grid wrap-chlid">
+                <div class="weui-grid__icon">
+                  <img src="images/icon_nav_button.png" alt="">
                 </div>
-                <div class="swiper-slide slide">
-                  <div class="placeholder">
-                    <img src="images/icon_nav_button.png" alt="" />
-                    <p>优惠券</p>
-                  </div>
+                <p class="weui-grid__label">
+                  Button
+                </p>
+              </a>
+              <a href="" class="weui-grid js_grid wrap-chlid">
+                <div class="weui-grid__icon">
+                  <img src="images/icon_nav_button.png" alt="">
                 </div>
-              </div>
-              <!-- Add Pagination -->
-              <div class="swiper-scrollbar"></div>
+                <p class="weui-grid__label">
+                  Button
+                </p>
+              </a>
+              <a href="" class="weui-grid js_grid wrap-chlid">
+                <div class="weui-grid__icon">
+                  <img src="images/icon_nav_button.png" alt="">
+                </div>
+                <p class="weui-grid__label">
+                  Button
+                </p>
+              </a>
             </div>
           </div>
+
         </div>
 
         <div id="tab2" class="weui-tab__bd-item"><a href="mine.html"></a></div>
@@ -140,15 +158,6 @@
         loop: true,
         autoplay: 3000
       });
-
-      var swiper = new Swiper('.wrap .swiper-container', {
-      slidesPerView: 4,
-      spaceBetween: 30,
-      freeMode: true,
-      // scrollbar: {
-      //   el: '.wrap .swiper-scrollbar',
-      // },
-    });
       // $(function() {
       //     FastClick.attach(document.body);
       // });
