--- a/mine.html
+++ b/mine.html
@@ -25,23 +25,26 @@
           <!-- 头部 -->
           <div class="header">
             <div class="setting"></div>
-            <div class="personal-information">
-              <img src="images/avatar.jpg" alt="" class="avatar">
+            <a href="personal.html" class="personal-information">
               <div class="personal">
-                <p>招商银行</p>
-                <span>17764810319</span>
+                <img src="images/avatar.jpg" alt="">
+                <div class="personal-message">
+                  <p>招商银行</p>
+                  <span>17764810319</span>
+                </div>
               </div>
-            </div>
+              <strong></strong>
+            </a>
           </div>
           <!-- 我的账户 -->
           <div class="weui-cells">
               <!-- <div class="weui-cells__title">我的账户</div> -->
               <div class="weui-cell weui-flex account">
-                <div class="weui-flex__item account-massage">
+                <div class="weui-flex__item account-message">
                   <span>我的资产(元)</span>
                   <i>8888</i>
                 </div>
-                <div class="weui-flex__item account-massage">
+                <div class="weui-flex__item account-message">
                   <span>剩余时长(时)</span>
                   <i>212</i>
                 </div>
