--- a/mine.html
+++ b/mine.html
@@ -24,7 +24,8 @@
         <div id="tab2" class="weui-tab__bd-item weui-tab__bd-item--active">
           <!-- 头部 -->
           <div class="header">
-            <div class="setting"></div>
+            <!-- 设置 -->
+            <!-- <div class="setting"></div> -->
             <a href="personal.html" class="personal-information show-loading">
               <div class="personal">
                 <img src="images/avatar.jpg" alt="">
@@ -90,13 +91,13 @@
       <div class="weui-tabbar">
         <a href="index.html" class="weui-tabbar__item show-loading">
           <div class="weui-tabbar__icon">
-            <img src="images/icon_nav_button.png" alt="" />
+            <img src="images/home-off.png" alt="" />
           </div>
           <p class="weui-tabbar__label">主页</p>
         </a>
         <a href="#tab2" class="weui-tabbar__item weui-bar__item--on">
           <div class="weui-tabbar__icon">
-            <img src="images/icon_nav_button.png" alt="" />
+            <img src="images/nav-my-on.png" alt="" />
           </div>
           <p class="weui-tabbar__label">我的</p>
         </a>
