--- a/personal.html
+++ b/personal.html
@@ -30,18 +30,18 @@
                 <img src="images/avatar.jpg" alt="" class="wrap-avatar">
               </div>
           </a>
-          <a class="weui-cell weui-cell_access" href="javascript:;">
+          <a class="weui-cell weui-cell_access" href="nickname.html">
             <div class="weui-cell__bd">
               <p>昵称</p>
             </div>
             <div class="weui-cell__ft">招商银行</div>
           </a>
-          <a class="weui-cell weui-cell_access" href="javascript:;">
+          <div class="weui-cell">
             <div class="weui-cell__bd">
               <p>账号</p>
             </div>
             <div class="weui-cell__ft">17764810319</div>
-          </a>
+          </div>
         </div>
         <div class="weui-cells">
           <a class="weui-cell weui-cell_access" href="change-password.html">
