--- a/history-record.html
+++ b/history-record.html
@@ -9,7 +9,7 @@
     <meta name="flexible" content="initial-dpr=2" />
     <title>记录详情</title>
     <!-- 手淘网适配移动端js -->
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -17,6 +17,16 @@
   </head>
 
   <body>
+      <!-- 顶部菜单 -->
+      <div class="weui-flex invoice-head">
+        <div class="weui-flex__item return">
+          <a href="javascript:;" onClick="javascript :history.back(-1);" class="invoice-return">返回</a>
+        </div>
+        <!-- <div class="weui-flex__item"><div class="placeholder">发票抬头</div></div> -->
+        <div class="homepage">
+          <a href="index.html"></a>
+        </div>
+      </div>
     <div class="weui-form-preview">
       <div class="weui-form-preview__hd">
         <div class="weui-form-preview__item history-record">
@@ -33,8 +43,8 @@
       </div>
       <div class="weui-form-preview__bd history-record-details">
         <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">缴费类型：</label>
-          <span class="weui-form-preview__value">临时缴费</span>
+          <label class="weui-form-preview__label">优惠方式：</label>
+          <span class="weui-form-preview__value">金额优惠</span>
         </div>
       </div>
       <div class="weui-form-preview__bd history-record-details">
@@ -51,12 +61,6 @@
       </div>
       <div class="weui-form-preview__bd history-record-details">
         <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">标识编码：</label>
-          <span class="weui-form-preview__value">123456789</span>
-        </div>
-      </div>
-      <div class="weui-form-preview__bd history-record-details">
-        <div class="weui-form-preview__item">
           <label class="weui-form-preview__label">入场时间：</label>
           <span class="weui-form-preview__value">2019-01-03 10:49:44</span>
         </div>
@@ -65,12 +69,6 @@
         <div class="weui-form-preview__item">
           <label class="weui-form-preview__label">出场时间：</label>
           <span class="weui-form-preview__value">2019-01-03 18:21:14</span>
-        </div>
-      </div>
-      <div class="weui-form-preview__bd history-record-details">
-        <div class="weui-form-preview__item">
-          <label class="weui-form-preview__label">支付单号：</label>
-          <span class="weui-form-preview__value">20190103182114</span>
         </div>
       </div>
     </div>
