--- a/history.html
+++ b/history.html
@@ -9,7 +9,7 @@
     <meta name="flexible" content="initial-dpr=2" />
     <title>历史记录</title>
     <!-- 手淘网适配移动端js -->
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <!-- <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script> -->
     <link rel="stylesheet" href="css/weui.min.css" />
     <link rel="stylesheet" href="css/jquery-weui.min.css" />
     <link rel="stylesheet" href="css/index.css" />
@@ -18,35 +18,16 @@
 
   <body>
     <div class="page__pd">
-      <!-- 搜索 -->
-      <div class="weui-search-bar" id="searchBar">
-        <form class="weui-search-bar__form" action="#">
-          <div class="weui-search-bar__box">
-            <i class="weui-icon-search"></i>
-            <input
-              type="search"
-              class="weui-search-bar__input"
-              id="searchInput"
-              placeholder="搜索"
-              required=""
-            />
-            <a href="javascript:" class="weui-icon-clear" id="searchClear"></a>
+        <!-- 顶部菜单 -->
+        <div class="weui-flex invoice-head">
+          <div class="weui-flex__item return">
+            <a href="javascript:;" onClick="javascript :history.back(-1);" class="invoice-return">返回</a>
           </div>
-          <label
-            class="weui-search-bar__label"
-            id="searchText"
-            style="transform-origin: 0px 0px 0px; opacity: 1; transform: scale(1, 1);"
-          >
-            <i class="weui-icon-search"></i> <span>搜索</span>
-          </label>
-        </form>
-        <a
-          href="javascript:"
-          class="weui-search-bar__cancel-btn"
-          id="searchCancel"
-          >取消</a
-        >
-      </div>
+          <!-- <div class="weui-flex__item"><div class="placeholder">发票抬头</div></div> -->
+          <div class="homepage">
+            <a href="index.html"></a>
+          </div>
+        </div>
 
       <div class="weui-panel weui-panel_access">
         <div class="weui-panel__bd" id="list">
@@ -173,28 +154,13 @@
 
         </div>
       </div>
+      <div class="weui-loadmore">
+        <i class="weui-loading"></i>
+        <span class="weui-loadmore__tips">正在加载</span>
+      </div>
     </div>
-    <div class="weui-loadmore">
-      <i class="weui-loading"></i>
-      <span class="weui-loadmore__tips">正在加载</span>
-    </div>
+    
     <script src="js/jquery-2.1.4.js"></script>
     <script src="js/jquery-weui.js"></script>
-    <!-- 懒加载 -->
-    <script>
-      // var loading = false;
-      // var history =
-      //   '<a href="javascript:void(0);" class="weui-media-box weui-media-box_appmsg"><div class="weui-media-box__hd"><img class="weui-media-box__thumb" src="images/history.png" alt="" /></div><div class="weui-media-box__bd"><h4 class="weui-media-box__title wrap-history">粤B123456 <span class="weui-media-box__title-after">-20元</span></h4><div class="weui-media-box__title wrap-history-bottom">2019-01-12<span class="weui-media-box__title-after">临时停车</span></div></div></a>';
-      // $(document.body)
-      //   .infinite()
-      //   .on("infinite", function() {
-      //     if (loading) return;
-      //     loading = true;
-      //     setTimeout(function() {
-      //       $("#list").append(history);
-      //       loading = false;
-      //     }, 2000);
-      //   });
-    </script>
   </body>
 </html>
